force-app/main/default/objects/Opportunity/fields/Ad_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Ad_Group_Id__c</fullName>
    <label>Ad Group Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>