force-app/main/default/objects/Opportunity/fields/Business_DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_DBA_Name__c</fullName>
    <label>Business DBA Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>