force-app/main/default/objects/Opportunity/fields/Campaign_Brand__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Brand__c</fullName>
    <label>Campaign Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debtifi</fullName>
                <label>🟩🟩🟩Debtifi🟩🟩🟩</label>
            </value>
            <value>
                <fullName>QRMCA</fullName>
                <label>🟨🟨🟨QRMCA🟨🟨🟨</label>
            </value>
            <value>
                <fullName>Debt Crusaders</fullName>
                <label>🟧🟧🟧Debt Crusaders🟧🟧🟧</label>
            </value>
            <value>
                <fullName>Debt Consultants Group</fullName>
                <label>🟥🟥🟥Debt Consultants Group🟥🟥🟥</label>
            </value>
            <value>
                <fullName>Everyday Debt</fullName>
            </value>
            <value>
                <fullName>Next Day Settlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>