force-app/main/default/objects/Opportunity/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Cant Afford</fullName>
            </value>
            <value>
                <fullName>Chose Competitor</fullName>
            </value>
            <value>
                <fullName>Direct Lender</fullName>
            </value>
            <value>
                <fullName>File Completed</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Unhappy with Service</fullName>
            </value>
            <value>
                <fullName>File Merged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>