force-app/main/default/objects/Opportunity/fields/Case_Manager__c.field-meta.xml
<CustomField>
    <fullName>Case_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>