force-app/main/default/objects/Opportunity/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <label>Underwriter Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved Send Contract</fullName>
            </value>
            <value>
                <fullName>Missing Info</fullName>
            </value>
            <value>
                <fullName>Payment Plan Wrong</fullName>
            </value>
            <value>
                <fullName>Declined By UW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>