force-app/main/default/objects/Opportunity/fields/Client_Status_BO__c.field-meta.xml
<CustomField>
    <fullName>Client_Status_BO__c</fullName>
    <label>Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>EFT Missing</fullName>
            </value>
            <value>
                <fullName>Judgement</fullName>
            </value>
            <value>
                <fullName>Manual Payments</fullName>
            </value>
            <value>
                <fullName>No Fee Program</fullName>
            </value>
            <value>
                <fullName>Program Complete</fullName>
            </value>
            <value>
                <fullName>UCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>