force-app/main/default/objects/Opportunity/fields/Close_Date_Name__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Name__c</fullName>
    <formula>CASE(
  MOD(CloseDate - DATE(1900,1,7), 7),
  0, &quot;Sunday&quot;,
  1, &quot;Monday&quot;,
  2, &quot;Tuesday&quot;,
  3, &quot;Wednesday&quot;,
  4, &quot;Thursday&quot;,
  5, &quot;Friday&quot;,
  6, &quot;Saturday&quot;,
  &quot;Unknown&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date Name</label>
    <type>Text</type>
</CustomField>