force-app/main/default/objects/Opportunity/fields/Closer_2__c.field-meta.xml
<CustomField>
    <fullName>Closer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closer 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>