force-app/main/default/objects/Opportunity/fields/Contract_Missing_Fields__c.field-meta.xml
<CustomField>
    <fullName>Contract_Missing_Fields__c</fullName>
    <label>Contract Missing Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>