force-app/main/default/objects/Opportunity/fields/Contract_Recalc_Token__c.field-meta.xml
<CustomField>
    <fullName>Contract_Recalc_Token__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Then Account flow updates it when an update was made in Account selected fields</description>
    <label>Contract Recalc Token</label>
    <type>Checkbox</type>
</CustomField>