force-app/main/default/objects/Opportunity/fields/Contract_SIgned_to_Cases__c.field-meta.xml
<CustomField>
    <fullName>Contract_SIgned_to_Cases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract SIgned to Cases</label>
    <type>Checkbox</type>
</CustomField>