force-app/main/default/objects/Opportunity/fields/Created_Date_from_Pipedrive__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_from_Pipedrive__c</fullName>
    <label>Created Date from Pipedrive</label>
    <type>Date</type>
</CustomField>