force-app/main/default/objects/Opportunity/fields/Credit_Card_Processing__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Card Processing?</label>
    <type>Checkbox</type>
</CustomField>