force-app/main/default/objects/Opportunity/fields/Day_Today__c.field-meta.xml
<CustomField>
    <fullName>Day_Today__c</fullName>
    <formula>TEXT(DAY(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Today</label>
    <type>Text</type>
</CustomField>