force-app/main/default/objects/Opportunity/fields/Docs_Link__c.field-meta.xml
<CustomField>
    <fullName>Docs_Link__c</fullName>
    <label>Docs Link</label>
    <length>31000</length>
    <type>LongTextArea</type>
</CustomField>