force-app/main/default/objects/Opportunity/fields/Docs_received__c.field-meta.xml
<CustomField>
    <fullName>Docs_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Docs received</label>
    <type>Checkbox</type>
</CustomField>