force-app/main/default/objects/Opportunity/fields/Est_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Est_Settlement__c</fullName>
    <label>Est Settlement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>43%</fullName>
            </value>
            <value>
                <fullName>60%</fullName>
            </value>
            <value>
                <fullName>80%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>