force-app/main/default/objects/Opportunity/fields/Est_weekly_payment__c.field-meta.xml
<CustomField>
    <fullName>Est_weekly_payment__c</fullName>
    <label>Estimated weekly payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>