force-app/main/default/objects/Opportunity/fields/Estimated_Debt_Savings__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Debt_Savings__c</fullName>
    <formula>BLANKVALUE(Estimated_Total_Debt__c, 0) -
BLANKVALUE(Total_Program__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Debt Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>