force-app/main/default/objects/Opportunity/fields/Estimated_Settlement_to_Creditors__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Settlement_to_Creditors__c</fullName>
    <formula>Estimated_Total_Debt__c *
(
    VALUE(
        SUBSTITUTE(
            BLANKVALUE(TEXT(Est_Settlement__c), &quot;0%&quot;),
            &quot;%&quot;,
            &quot;&quot;
        )
    ) / 100
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Settlement to Creditors</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>