force-app/main/default/objects/Opportunity/fields/Fee_Status__c.field-meta.xml
<CustomField>
    <fullName>Fee_Status__c</fullName>
    <formula>CASE(
    StageName,
    &quot;NSF&quot;, &quot;Not Completed&quot;,
    &quot;Enrolled&quot;, &quot;Not Completed&quot;,
    &quot;Contract Signed&quot;, &quot;Ondeck&quot;,
    &quot;Cancelled&quot;, &quot;Cancelled&quot;,
    &quot;Fees Done&quot;, &quot;Fees Done&quot;,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Status</label>
    <type>Text</type>
</CustomField>