force-app/main/default/objects/Opportunity/fields/Final_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Final_Fee_Paid__c</fullName>
    <label>Final Fee Paid</label>
    <type>Date</type>
</CustomField>