force-app/main/default/objects/Opportunity/fields/First_Draft_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Draft_Date__c</fullName>
    <label>First Draft Date</label>
    <type>Date</type>
</CustomField>