force-app/main/default/objects/Opportunity/fields/Fronter__c.field-meta.xml
<CustomField>
    <fullName>Fronter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fronter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>