force-app/main/default/objects/Opportunity/fields/gclid__c.field-meta.xml
<CustomField>
    <fullName>gclid__c</fullName>
    <description>This is for the google analytics</description>
    <label>gclid</label>
    <type>TextArea</type>
</CustomField>