force-app/main/default/objects/Opportunity/fields/hashed_email__c.field-meta.xml
<CustomField>
    <fullName>hashed_email__c</fullName>
    <description>hashed_email From google Analytics</description>
    <label>hashed email</label>
    <type>Email</type>
</CustomField>