force-app/main/default/objects/Opportunity/fields/Integrate_with_EPPS__c.field-meta.xml
<CustomField>
    <fullName>Integrate_with_EPPS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field to have greater control of Opportunities and downstream objects that are integrated with EPPS</description>
    <inlineHelpText>Temporary field to have greater control of Opportunities and downstream objects that are integrated with EPPS</inlineHelpText>
    <label>Integrate with EPPS</label>
    <type>Checkbox</type>
</CustomField>