force-app/main/default/objects/Opportunity/fields/Lead_Created_Date_Tiem__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Date_Tiem__c</fullName>
    <label>Lead Created Date/Tiem</label>
    <type>DateTime</type>
</CustomField>