force-app/main/default/objects/Opportunity/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source DCG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AnswerForce</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>BOOKING</fullName>
            </value>
            <value>
                <fullName>BrodyLeads</fullName>
            </value>
            <value>
                <fullName>CALCULATOR</fullName>
            </value>
            <value>
                <fullName>Cherry</fullName>
            </value>
            <value>
                <fullName>Cherry_V.2</fullName>
            </value>
            <value>
                <fullName>Cherry07</fullName>
            </value>
            <value>
                <fullName>Cherry14</fullName>
            </value>
            <value>
                <fullName>Cherry21</fullName>
            </value>
            <value>
                <fullName>Cherry30</fullName>
            </value>
            <value>
                <fullName>Cherry DC</fullName>
            </value>
            <value>
                <fullName>cherrySms</fullName>
            </value>
            <value>
                <fullName>CherryV.2</fullName>
            </value>
            <value>
                <fullName>cherryX</fullName>
            </value>
            <value>
                <fullName>Convoso</fullName>
            </value>
            <value>
                <fullName>CT Legal Scraper</fullName>
            </value>
            <value>
                <fullName>DCGDI</fullName>
            </value>
            <value>
                <fullName>DCG DI</fullName>
            </value>
            <value>
                <fullName>EBOOK</fullName>
            </value>
            <value>
                <fullName>EData</fullName>
            </value>
            <value>
                <fullName>EDD30</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Everyday Form</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>facebookX</fullName>
            </value>
            <value>
                <fullName>Google Ad Words</fullName>
            </value>
            <value>
                <fullName>HB700</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>