force-app/main/default/objects/Opportunity/fields/Lead_Source_DC__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_DC__c</fullName>
    <label>Lead Source DC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACF</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Berry</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Cherry</fullName>
            </value>
            <value>
                <fullName>CX Referral</fullName>
            </value>
            <value>
                <fullName>DCG</fullName>
            </value>
            <value>
                <fullName>DCGDI</fullName>
            </value>
            <value>
                <fullName>DD Web Form</fullName>
            </value>
            <value>
                <fullName>DHW</fullName>
            </value>
            <value>
                <fullName>Dialer</fullName>
            </value>
            <value>
                <fullName>Diamond Quiz</fullName>
            </value>
            <value>
                <fullName>Docs In/Ready To Close drip</fullName>
            </value>
            <value>
                <fullName>DR Live Transfers</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Everyday Form</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Facebook Ads</fullName>
            </value>
            <value>
                <fullName>Fiche</fullName>
            </value>
            <value>
                <fullName>Google Ad Words</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>ISO Referral</fullName>
            </value>
            <value>
                <fullName>JJ AP</fullName>
            </value>
            <value>
                <fullName>JJ Legal</fullName>
            </value>
            <value>
                <fullName>JJ Live</fullName>
            </value>
            <value>
                <fullName>JJ PACK</fullName>
            </value>
            <value>
                <fullName>JJ SBA</fullName>
            </value>
            <value>
                <fullName>JonKay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>