force-app/main/default/objects/Opportunity/fields/Lead_Source_Debtifi__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Debtifi__c</fullName>
    <label>Lead Source NXDS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>BrodyLeads</fullName>
            </value>
            <value>
                <fullName>Cherry</fullName>
            </value>
            <value>
                <fullName>Cherry DC</fullName>
            </value>
            <value>
                <fullName>Convoso</fullName>
            </value>
            <value>
                <fullName>DCG</fullName>
            </value>
            <value>
                <fullName>DCGDI</fullName>
            </value>
            <value>
                <fullName>EBOOK</fullName>
            </value>
            <value>
                <fullName>EData</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Everyday Form</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>GHL</fullName>
            </value>
            <value>
                <fullName>Google Ad Words</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>JJ Live</fullName>
            </value>
            <value>
                <fullName>JV Referral</fullName>
            </value>
            <value>
                <fullName>LB Referral</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>NY Legal Scaper</fullName>
            </value>
            <value>
                <fullName>One Oak</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>QR-DC</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Sourcify</fullName>
            </value>
            <value>
                <fullName>TBS Referral</fullName>
            </value>
            <value>
                <fullName>Telegram</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>